# ChangeLog for sys-apps/systemd-readahead
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/systemd-readahead/ChangeLog,v 1.1 2015/01/17 15:52:56 pacho Exp $

*systemd-readahead-216 (17 Jan 2015)

  17 Jan 2015; Pacho Ramos <pacho@gentoo.org> +metadata.xml,
  +systemd-readahead-216.ebuild:
  Initial ebuild