@@ -3,10 +3,10 @@ DEPEND=>=sys-apps/systemd-217:= app-arch/xz-utils:0 dev-util/gperf >=dev-util/in
 DESCRIPTION=Split of readahead systemd implementation
 EAPI=5
 HOMEPAGE=http://dev.gentoo.org/~pacho/systemd-readahead.html
-KEYWORDS=~alpha ~amd64 ~arm ~ia64 ~ppc ~ppc64 ~sparc ~x86
+KEYWORDS=~alpha amd64 ~arm ~ia64 ~ppc ~ppc64 ~sparc x86
 LICENSE=LGPL-2.1 MIT
 RDEPEND=>=sys-apps/systemd-217:=
 SLOT=0
 SRC_URI=http://www.freedesktop.org/software/systemd/systemd-216.tar.xz
 _eclasses_=eutils	9fb270e417e0e83d64ca52586c4a79de	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	systemd	090342761f573a8280dd5aa6b0345f3b	toolchain-funcs	c961250d50160cd37d6b7fd9e8429c92	udev	da001465a2e939c93f7ae16947ce3438
-_md5_=52de06faa33f891bdd3a8cfa257e4aab
+_md5_=74dbd317044da515b8d7ba0a64e3e4cb
