@@ -1,6 +1,9 @@
 # ChangeLog for sys-apps/systemd-readahead
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/systemd-readahead/ChangeLog,v 1.1 2015/01/17 15:52:56 pacho Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/systemd-readahead/ChangeLog,v 1.2 2015/04/26 09:50:35 pacho Exp $
+
+  26 Apr 2015; Pacho Ramos <pacho@gentoo.org> systemd-readahead-216.ebuild:
+  amd64/x86 stable
 
 *systemd-readahead-216 (17 Jan 2015)
 
